# k-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  db.py  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  gqlgen.yml  package.json  pnpm-lock.yaml  pyproject.toml  server.go  tailwind.config.ts
.github/: dependabot.yml
.github/actions/build-push-image/: action.yml
.github/workflows/: build-push-image.yml  build.yml  ci-pipeline.yml  codeql-analysis.yml  codeql.yml  release.yml
actions/build-push-image/: actions.yml
alembic/: env.py
alembic/versions/: 00f86965b05a_payment_category.py  1c9946428c3f_payment_entry_and_category.py  3e2b14dec671_basic_account_and_transaction.py  5a4906bfb3bd_switch_from_float_to_decimal.py  7c2873a67659_exchange_payment_type.py  90e77fb7e8ff_payment_service_provider_relationship.py  94f231ce770f_create_taiwan_e_invoice_tables.py  a02d9bdab5c5_payment_service_provider.py  a72afc2909ca_unify_description_fields.py  b57d9713593a_account_balance.py  b591254840d9_nullable_transaction_psp_reconcile.py  b6b977bf8dd2_transaction_reconcile.py  c0db25a49f08_change_transaction_primary_key.py  c48d26a61bef_revise_invoice_detail.py  d750f208cb59_payment_entry_transaction_index.py  d8b620575729_non_nullable_payment_category.py  e4e019712d5d_subcategory_and_disable.py  f4a2b4c19de0_timezone_support.py
app/: layout.tsx  page.tsx
app/category/: page.tsx
app/setting/: page.tsx
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0051bc20ef29_remove_payment_total_add_payment_entry_.py  00f86965b05a_payment_category.py  67f7bc3ffc60_transaction_psp_reconcile_non_nullable.py  90e77fb7e8ff_payment_service_provider_relationship.py  f4a2b4c19de0_timezone_support.py
backend/k_backend/: auth.py  main.py
backend/k_backend/core/: config.py
backend/k_backend/crud/: currency.py  payment.py
backend/k_backend/logics/: account.py  payment.py
backend/k_backend/routers/: __init__.py  auth.py  category.py  currency.py  tw_invoice.py
backend/k_backend/schemas/: __init__.py  account.py  api_models.py
backend/k_backend/tests/: conftest.py
backend/k_backend/tests/crud/: test_currency.py  test_payment.py
backend/k_backend/tests/factories/: __init__.py  account.py  currency.py  payment.py
backend/kayman/: auth.py  main.py  util.py
backend/kayman/core/: config.py  db.py
backend/kayman/crud/: account.py  currency.py  payment.py  payment_entry.py  transaction.py
backend/kayman/logics/: account.py  payment.py
backend/kayman/routers/: __init__.py  account.py  auth.py  category.py  currency.py  payment.py  psp.py  transaction.py  tw_invoice.py
backend/kayman/schemas/: __init__.py  account.py  api_models.py  category.py  currency.py  payment.py  psp.py  transaction.py  tw_invoice.py
backend/kayman/tests/: conftest.py
backend/kayman/tests/crud/: test_account.py  test_currency.py  test_payment.py  test_payment_entry.py  test_transaction.py
backend/kayman/tests/factories/: __init__.py  account.py  category.py  currency.py  payment.py  payment_entry.py  transaction.py
backend/kayman/tests/logics/: test_account.py  test_payment.py
backend/scripts/: backup.sh  built_client.sh  convert_openapi.py  lint.sh  restore.sh
components/: app-sidebar.tsx  tree.tsx
frontend/: .gitignore  README.md  eslint.config.mjs  next.config.mjs  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/setting/: page.tsx
frontend/components/: date-range-picker.tsx  logo.tsx
frontend/components/ui/: sidebar.tsx
frontend/lib/client/: sdk.gen.ts  types.gen.ts
frontend/lib/context/: AuthContext.tsx
graph/: resolver.go  schema.graphqls  schema.resolvers.go
graph/db/: item.go  payment_account.go  transaction.go
graph/model/: models_gen.go  todo.go
k-backend/: main.py
k-backend/alembic/: env.py
k-backend/alembic/versions/: 94f231ce770f_create_taiwan_e_invoice_tables.py
k-backend/routers/: tw_invoice.py
k_backend/: auth.py  db.py  main.py  util.py
k_backend/core/: config.py  db.py
k_backend/crud/: account.py  currency.py  payment.py  payment_entry.py  transaction.py
k_backend/logics/: account.py  payment.py
k_backend/routers/: __init__.py  account.py  auth.py  category.py  currency.py  payment.py  psp.py  transaction.py  tw_invoice.py
k_backend/schemas/: README.md  __init__.py  _custom_types.py  account.py  api_models.py  category.py  clients.py  currency.py  payment.py  psp.py  transaction.py  tw_invoice.py
k_backend/tests/: conftest.py  factories.py
k_backend/tests/crud/: test_account.py  test_payment.py  test_payment_entry.py  test_transaction.py
k_backend/tests/factories/: __init__.py  category.py  payment.py  payment_entry.py  transaction.py
k_backend/tests/logics/: test_account.py  test_payment.py
lib/: types.ts
lib/context/: AuthContext.tsx
scripts/: convert_openapi.py  test.sh
