[project]
name = "k-backend"
version = "0.7.0"
description = "The backend API server of K"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
authors = [{ name = "Tomy Hsieh", email = "pypi@tomy.me" }]
dependencies = [
    "fastapi (>=0.85.0,<0.86.0)",
    "sqlalchemy (==1.4.41)",
    "pydantic (>=1.10.2,<2.0.0)",
    "sqlmodel (>=0.0.8,<0.0.9)",
    "uvicorn[standard] (>=0.18.2,<0.19.0)",
    "psycopg2 (>=2.9.3,<3.0.0)",
    "alembic (>=1.8.1,<2.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "python-multipart (>=0.0.5,<0.0.6)",
    "loguru (>=0.6.0,<0.7.0)",
    "tzdata (>=2022.4,<2023.0)",
    "simplejson (>=3.17.6,<4.0.0)",
]

[project.urls]
repository = "https://github.com/tomy0000000/k-backend"
documentation = "https://github.com/tomy0000000/k-backend/wiki"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
ipython = "^8.5.0"
flake8 = "^5.0.4"
mypy = "^0.981"

[tool.isort]
profile = "black"
src_paths = ["k_backend"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
